objects/CaseStatusHistory__c.object
<CustomObject>
    <fields>
        <fullName>ElapsedTimeHours__c</fullName>
        <formula>IF(ISBLANK(EndDateTime__c), NOW()-StartDateTime__c, EndDateTime__c-StartDateTime__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ElapsedTimeMins__c</fullName>
        <formula>IF(ISBLANK(EndDateTime__c), NOW()-StartDateTime__c, EndDateTime__c-StartDateTime__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time (Mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerProfile__c</fullName>
        <label>Owner Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerRole__c</fullName>
        <label>Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isQueue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Status Histories</relationshipLabel>
        <relationshipName>Case_Status_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Case Status History</label>
    <nameField>
        <displayFormat>CSH-{0000000}</displayFormat>
        <label>Case Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Status History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>